--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Fredericka+the+Great&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Vite + React + TS</title>
   </head>
   <body>
