at now firing stage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>BattleSHIP</title>
   </head>
   <body>
     <div id="root"></div>
